add method for find a categor by idy
